# dental-analysis

./: .env.example  .gitignore  NOTICE  README.md  pyproject.toml  requirements-live.txt
.claude-plugin/: marketplace.json
.session/: example_case01.md  working_consciousness.template.md
agents/: README.md  claude-workspace-probe.md  guardrail-verifier.md  jlens-diagnostic.md  lens-observer.md  modeling-technique-selector.md  oral-systemic-relational-reasoner.md  orchestrator.md  skillopt-optimizer.md
colab/: histora_diagnostic.ipynb
demo/: README.md  case.json  run_case_study.py  run_cohort.py  run_demo.py
docs/: AB_PROTOCOL.md  API_FEATURE_REQUEST.md  APPROACH.md  BENCHMARK.md  CASE-STUDY.md  CITATIONS.md  CLAUDE-SCIENCE-ANALYSIS.md  CLAUDE-SCIENCE.md  DATA-AND-DELIVERY.md  DATASETS.md  DEMO-SCRIPT.md  DUAL_LENS.md  EVOLUTION.md  EXECUTION_PLAN.md  HACKATHON_STRATEGY.md  HISTORA-Documento-ES.md  HOW-IT-WAS-BUILT.md  IMPACT.md  MECHANISTIC_HARNESS_PLAN.md  MODELS.md  OVERVIEW.md  PAPER.md  PITCH.md  PLAN.md  PROBLEM.md  REFORMULATION.md  RESEARCH_SUMMARY.md  RETROSPECTIVE.md  ROADMAP-STAGE2.md  ROADMAP.md  SELF-CORRECTION.md  SOLUTION.md  STAGE2-WORKPLAN.md  SUBMISSION.md  VISION.md  model-library.md
probes/: qwen_correlation_probe.py
prompts/: controller.md  evaluator.md  observer.md
schemas/: deficiency_map_schema.json  lens_readout_schema.json  lever_record_schema.json  output_schema.json
skills/: README.md  claude-workspace-probe.md  harness-evolution.md  lens-deficiency-analysis.md  non-diagnostic-guardrail.md  oral-systemic-analysis.md  (+3 more)
(+201 files in other folders)
